<resources>
    <string name="app_name">DeadLiners</string>
    <string name="deadliners">DeadLiners</string>
    <string name="masukkan_aktivitas">Masukkan Aktivitas</string>
    <string name="lihat_aktivitas">Lihat Aktivitas</string>
    <string name="nama_aktivitas">Nama Aktivitas</string>
    <string name="masukkan_nama_aktivitas_disini">Masukkan nama aktivitas disini</string>
    <string name="tanggal_deadline">Tanggal dan jam Deadline</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="submit">submit</string>
    <string name="deskripsi_aktivitas">Deskripsi Aktivitas</string>
    <string name="value_aktivitas">Value Aktivitas</string>
    <string-array name="spinnervalue_items">
        <item>Penting</item>
        <item>Tidak Penting</item>
    </string-array>
    <string-array name="spinnertiming_items">
        <item>Mendesak</item>
        <item>Tidak Mendesak</item>
    </string-array>
    <string name="description">Deskripsi</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="title">Judul</string>
    <string name="pilih_tanggal_dan_jam">Pilih Tanggal dan Jam</string>
    <string name="pilih_jam">Pilih Jam</string>
    <string name="waktu_aktivitas">Waktu Aktivitas</string>
    <string name="kuadran">Kuadran</string>
    <string name="kuadranTeks">Kuadran:</string>
</resources>